--- a/client/components/layout/style.css
+++ b/client/components/layout/style.css
@@ -1,3 +1,30 @@
 .test {
-  color: red;
+  /* color: red; */
+  /* min-height: 100vh; */
+}
+
+.header {
+  position: fixed;
+  width: 100%;
+  height: 50px;
+  border: 1px solid red;
+  display: flex;
+  /* flex-direction: row; */
+  justify-content: space-between;
+  /* z-index: 2; */
+  background: #fff;
+}
+
+.main {
+  /* box-sizing: ; */
+  /* border: 5px solid green; */
+  width: 100%;
+  min-height: 100vh;
+  padding-top: 50px;
+}
+
+.item {
+  height: 100px;
+  border: 1px solid blue;
+  margin: 0;
 }
