--- a/client/components/layout/style.css
+++ b/client/components/layout/style.css
@@ -1,18 +1,32 @@
-.test {
-  /* color: red; */
-  /* min-height: 100vh; */
-}
-
 .header {
   position: fixed;
   width: 100%;
-  height: 50px;
-  border: 1px solid red;
+  height: 44px;
+  padding: 0 8px;
+  /* border: 1px solid red; */
   display: flex;
   /* flex-direction: row; */
   justify-content: space-between;
+  align-items: center;
   /* z-index: 2; */
   background: #fff;
+  line-height: 0;
+
+  box-shadow: 0px 4px 4px 0px #00000040;
+}
+
+/* .logoContainer img {
+  width: 100px;
+  height: 100px;
+} */
+
+#mock {
+  width: 72px;
+  display: block;
+}
+
+#cartIcon {
+  margin-left: 24px;
 }
 
 .main {
@@ -20,11 +34,25 @@
   /* border: 5px solid green; */
   width: 100%;
   min-height: 100vh;
-  padding-top: 50px;
+  /* padding-top: 56px;
+  padding-left: 8px;
+  padding-right: 8px; */
+  padding: 56px 12px 12px 12px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  /* gap: 12px; */
+}
+
+.content {
+  padding: 56px 12px 12px 12px;
+  /* padding: 0 10px; */
+  width: 100%;
+  min-height: 100vh;
 }
 
 .item {
   height: 100px;
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
   margin: 0;
 }
