--- a/client/layout/style.css
+++ b/client/layout/style.css
@@ -34,6 +34,7 @@
   /* border: 5px solid green; */
   width: 100%;
   min-height: 100vh;
+  /* min-height: 100%; */
   /* padding-top: 56px;
   padding-left: 8px;
   padding-right: 8px; */
