--- a/client/components/offer-item/style.css
+++ b/client/components/offer-item/style.css
@@ -3,6 +3,32 @@
   padding: 10px;
 }
 
-.offerItem p {
+.wrapper p {
   margin-bottom: 10px;
+}
+
+.linkStyle > a {
+  color: rgb(0, 102, 255);
+  text-decoration: none;
+}
+
+.profileLink {
+  display: inline-block;
+  margin-bottom: 10px;
+}
+
+.offerLink {
+  /* display: flex;
+  flex-direction: row-reverse; */
+}
+
+.bottomBlock {
+  display: flex;
+  align-items: end;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.date {
+  margin: 0;
 }
