--- a/client/pages/offer-page/style.css
+++ b/client/pages/offer-page/style.css
@@ -1,4 +1,43 @@
-.container {
+/* .container {
   max-width: 800px;
   margin: 0 auto;
+}
+
+.offerItem p {
+  margin-bottom: 10px;
+} */
+
+.wrapper {
+  border: 1px solid;
+  padding: 10px;
+}
+
+.wrapper p {
+  margin-bottom: 10px;
+}
+
+.linkStyle > a {
+  color: rgb(0, 102, 255);
+  text-decoration: none;
+}
+
+.profileLink {
+  display: inline-block;
+  margin-bottom: 10px;
+}
+
+.offerLink {
+  /* display: flex;
+  flex-direction: row-reverse; */
+}
+
+.bottomBlock {
+  display: flex;
+  align-items: end;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.date {
+  margin: 0;
 }
