--- a/client/pages/user-profile/style.css
+++ b/client/pages/user-profile/style.css
@@ -1,10 +1,53 @@
+/* USER-PROFILE-ITEM */
+
 .container {
   max-width: 800px;
   margin: 0 auto;
 }
 
 .avatar {
-  width: 50px;
-  height: 50px;
+  width: 150px;
+  height: 150px;
   background: red;
+}
+
+.wrapper {
+  border: 1px solid;
+}
+
+/* USER-OFFER-ITEM */
+
+.wrapper {
+  border: 1px solid;
+  padding: 10px;
+}
+
+.wrapper p {
+  margin-bottom: 10px;
+}
+
+.linkStyle > a {
+  color: rgb(0, 102, 255);
+  text-decoration: none;
+}
+
+.profileLink {
+  display: inline-block;
+  margin-bottom: 10px;
+}
+
+.offerLink {
+  /* display: flex;
+  flex-direction: row-reverse; */
+}
+
+.bottomBlock {
+  display: flex;
+  align-items: end;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.date {
+  margin: 0;
 }
