--- a/client/layout/style.css
+++ b/client/layout/style.css
@@ -1,6 +1,9 @@
 .header {
   position: fixed;
-  width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  /* width: 100%; */
   height: 44px;
   padding: 0 8px;
   /* border: 1px solid red; */
@@ -46,11 +49,11 @@
 }
 
 .content {
-  /* padding: 56px 12px 12px 12px; */
+  padding: 56px 12px 12px 12px;
   /* padding: 0 10px; */
   width: 100%;
   min-height: 100vh;
-  
+
   width: 100%;
   max-width: 800px;
   margin: 0 auto;
