--- a/client/pages/user-profile/style.css
+++ b/client/pages/user-profile/style.css
@@ -22,6 +22,10 @@
   padding: 10px;
 }
 
+.offerItem {
+  position: relative;
+}
+
 .wrapper p {
   margin-bottom: 10px;
 }
@@ -50,4 +54,10 @@
 
 .date {
   margin: 0;
+}
+
+.deleteBtn {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
