updated design in dialogs and offers pages

--- a/client/components/message-item/style.css
+++ b/client/components/message-item/style.css
@@ -4,6 +4,10 @@
   margin-bottom: 10px;
 }
 
+.wrapper:last-child {
+  /* padding-top: 20px; */
+}
+
 .text {
   display: inline-block;
   /* background-color: red; */
