--- a/client/components/offer-item/style.css
+++ b/client/components/offer-item/style.css
@@ -1,14 +1,40 @@
 .wrapper {
-  border: 1px solid;
+  /* border: 1px solid; */
+  background: rgb(248, 248, 248);
   padding: 10px;
+  width: calc(100%);
+  font-size: 14px;
+  margin-bottom: 4px;
+  border-radius: 10px;
 }
 
 .wrapper p {
   margin-bottom: 10px;
 }
 
+.images {
+  width: 200px;
+  margin: 0 auto;
+  display: flex;
+  margin-bottom: 10px;
+  overflow: auto;
+  scroll-snap-type: x mandatory;
+}
+
+.img {
+  width: 200px;
+  flex-shrink: 0;
+  /* display: inline-block; */
+  /* height: 100%; */
+  height: 200px;
+  margin-right: 10px;
+  background: grey;
+  border: 1px solid;
+  scroll-snap-align: start;
+}
+
 .linkStyle > a {
-  color: rgb(0, 102, 255);
+  color: #0066ff;
   text-decoration: none;
 }
 
@@ -23,10 +49,10 @@
 }
 
 .bottomBlock {
-  display: flex;
+  /* display: flex;
   align-items: end;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-between; */
 }
 
 .date {
