--- a/client/layout/style.css
+++ b/client/layout/style.css
@@ -1,66 +1,93 @@
-.header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  /* width: 100%; */
-  height: 44px;
-  padding: 0 8px;
-  /* border: 1px solid red; */
+.wrapper {
   display: flex;
-  /* flex-direction: row; */
-  justify-content: space-between;
-  align-items: center;
-  /* z-index: 2; */
-  background: #fff;
-  line-height: 0;
-
-  box-shadow: 0px 4px 4px 0px #00000040;
-}
-
-/* .logoContainer img {
-  width: 100px;
-  height: 100px;
-} */
-
-#mock {
-  width: 72px;
-  display: block;
-}
-
-#cartIcon {
-  margin-left: 24px;
-}
-
-.main {
-  /* box-sizing: ; */
-  /* border: 5px solid green; */
-  width: 100%;
-  min-height: 100vh;
-  /* min-height: 100%; */
-  /* padding-top: 56px;
-  padding-left: 8px;
-  padding-right: 8px; */
-  /* padding: 56px 12px 12px 12px; */
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  /* gap: 12px; */
+  flex-direction: column;
+  height: 100vh;
 }
 
 .content {
-  padding: 56px 12px 12px 12px;
+  /* padding: 56px 12px 12px 12px; */
   /* padding: 0 10px; */
   width: 100%;
-  min-height: 100vh;
-
-  width: 100%;
-  max-width: 800px;
+  /* min-height: 100vh; */
+  /* max-width: 800px; */
   margin: 0 auto;
+  flex: 1 0;
+  overflow: auto;
+}
+
+.navbar {
+  /* flex: 0 0; */
+  width: 100%;
+  display: flex;
+  /* justify-content: space-between; */
+  /* position: relative; */
+  background: #f0f0f0;
+  flex: 0 0 60px;
 }
 
 .item {
-  height: 100px;
+  /* height: 100px; */
   /* border: 1px solid blue; */
   margin: 0;
+}
+
+.navPad {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+  background: #f0f0f0;
+}
+
+.navPadActive {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+  /* background: rgb(163, 163, 163) */
+}
+
+
+.navBtn img {
+  /* width: 100%; */
+  /* height: 24px; */
+}
+
+/* .active {
+  background: red;
+} */
+
+.addOfferBtn {
+  position: relative;
+  top: -13px;
+  /* left: calc(50% - 25px);
+  top: calc(-25px); */
+  border-radius: 50%;
+  /* border: 0; */
+  /* height: 0px;
+  width: 0px; */
+  /* background-color: red; */
+  padding: 30px;
+  flex: 0;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.addOfferBtn::before {
+  content: '';
+  top: calc(50% - 1px);
+  left: 20px;
+  position: absolute;
+  height: 2px;
+  width: 20px;
+  background: #647DA3;
+}
+
+.addOfferBtn::after {
+  content: '';
+  top: 20px;
+  left: calc(50% - 1px);
+  position: absolute;
+  width: 2px;
+  height: 20px;
+  background: #647DA3;
 }
