--- a/client/pages/offer-page/style.css
+++ b/client/pages/offer-page/style.css
@@ -8,12 +8,36 @@
 } */
 
 .wrapper {
-  border: 1px solid;
+  /* border: 1px solid; */
   padding: 10px;
 }
 
 .wrapper p {
   margin-bottom: 10px;
+}
+
+.images {
+  /* width: auto; */
+  /* height: 120px; */
+  display: flex;
+  /* margin-bottom: 10px; */
+  padding-bottom: 10px;
+  overflow: auto;
+  scroll-snap-type: x mandatory;
+  width: 300px;
+  /* overflow: hidden; */
+}
+
+.img {
+  width: 300px;
+  height: 300px;
+  flex-shrink: 0;
+  /* display: inline-block; */
+  /* height: 100%; */
+  margin-right: 10px;
+  background: grey;
+  border: 1px solid;
+  scroll-snap-align: start;
 }
 
 .linkStyle > a {
@@ -32,12 +56,13 @@
 }
 
 .bottomBlock {
-  display: flex;
+  /* display: flex;
   align-items: end;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-between; */
 }
 
 .date {
   margin: 0;
+  font-size: 12px;
 }
