--- a/client/pages/offers-list/style.css
+++ b/client/pages/offers-list/style.css
@@ -2,3 +2,54 @@
   max-width: 800px;
   margin: 0 auto;
 } */
+
+.header {
+  position: fixed;
+  padding: 10px 20px;
+  height: 60px;
+  width: 100%;
+  background: #ffffff;
+}
+
+.headerWrapper {
+  position: relative;
+}
+
+.searchInput {
+  width: 100%;
+  /* height: 100%; */
+  height: 40px;
+  padding-left: 10px;
+  border-radius: 8px;
+  border: 1px solid;
+  /* background: inherit; */
+  box-sizing: border-box;
+  /* padding: 0; */
+  /* padding: 10px; */
+  font-size: 16px;
+}
+
+.searchButton {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: none;
+  border: none;
+  height: 100%;
+  /* border-radius: 50%; */
+  line-height: 0;
+  margin-right: 14px;
+  /* width: 24px;
+  height: 24px; */
+}
+
+.filterIcon {
+  /* line-height: 1; */
+  /* line-height: 100px; */
+}
+
+.content {
+  padding-top: 60px;
+  display: flex;
+  flex-wrap: wrap;
+}
