--- a/client/components/chats-list-item/style.css
+++ b/client/components/chats-list-item/style.css
@@ -6,7 +6,7 @@
   margin-bottom: 4px;
   border-radius: 10px;
   display: flex;
-  
+  position: relative;
 }
 
 .flexitem_1 {
@@ -62,4 +62,10 @@
   /* text-overflow: ellipsis; */
   font-size: 16px;
   padding-bottom: 6px;
+}
+
+.openChatLink {
+  position: absolute;
+  left: 21px;
+  top: 26px;
 }
