--- a/client/components/offer-item/style.css
+++ b/client/components/offer-item/style.css
@@ -1,11 +1,12 @@
 .wrapper {
   /* border: 1px solid; */
   background: rgb(248, 248, 248);
-  padding: 10px;
+  /* padding: 10px 40px; */
   width: calc(100%);
   font-size: 14px;
   margin-bottom: 4px;
   border-radius: 10px;
+  /* text-align: center; */
 }
 
 .wrapper p {
@@ -13,24 +14,37 @@
 }
 
 .images {
-  width: 200px;
+  width: 300px;
   margin: 0 auto;
   display: flex;
-  margin-bottom: 10px;
+  /* margin-bottom: 16px; */
   overflow: auto;
   scroll-snap-type: x mandatory;
 }
 
 .img {
-  width: 200px;
+  width: 300px;
   flex-shrink: 0;
   /* display: inline-block; */
   /* height: 100%; */
-  height: 200px;
+  height: 300px;
   margin-right: 10px;
   background: grey;
   border: 1px solid;
   scroll-snap-align: start;
+}
+
+.info {
+  padding: 16px;
+}
+
+.give, .want {
+  font-size: 16px;
+}
+
+.description, .date, .address {
+  color: rgb(100, 100, 100);
+  font-size: 14px;
 }
 
 .linkStyle > a {
