--- a/client/layout/style.css
+++ b/client/layout/style.css
@@ -8,6 +8,7 @@
   /* padding: 56px 12px 12px 12px; */
   /* padding: 0 10px; */
   width: 100%;
+  /* height: 100vh; */
   /* min-height: 100vh; */
   /* max-width: 800px; */
   margin: 0 auto;
