--- a/client/pages/offer-form/style.css
+++ b/client/pages/offer-form/style.css
@@ -1,9 +1,32 @@
 .wrapper {
-  border: 1px solid;
+  /* border: 1px solid; */
   padding: 10px;
 }
 
-.newOfferForm input {
+.newOfferForm input, textarea {
   margin-bottom: 12px;
+  margin-top: 4px;
   width: 100%;
+  box-sizing: border-box;
+}
+
+.newOfferForm textarea {
+  box-sizing: border-box;
+  width: 100%;
+  height: 60px;
+  resize: none;
+}
+
+.imgBlock {
+  height: 150px;
+  border: 1px solid;
+  margin-bottom: 12px;
+}
+
+.submitBtn {
+  width: 100%;
+  font-size: 20px;
+  padding: 4px 0;
+  border-radius: 0;
+  border: 1px solid;
 }
